<resources>
    <string name="pref_default_dpad_rotate">0</string>
    <string name="pref_default_hotkey_mouse" />
    <string name="pref_default_hotkey_gamepad" />
    <string name="pref_default_hotspot_corner">1</string>
    <string name="pref_default_version_code">0</string>
    <string name="pref_default_transparency">192</string>
    <string name="pref_default_keyboard_layout">10Buttons</string>
    <string name="pref_default_save_profile">untitled</string>
    <string name="pref_default_button_up">0</string>
    <string name="pref_default_button_down">0</string>
    <string name="pref_default_button_left">0</string>
    <string name="pref_default_button_right">0</string>
    <string name="pref_default_button_up_left">0</string>
    <string name="pref_default_button_up_right">0</string>
    <string name="pref_default_button_down_left">0</string>
    <string name="pref_default_button_down_right">0</string>
    <string name="pref_default_button_a">0</string>
    <string name="pref_default_button_b">0</string>
    <string name="pref_default_button_c">0</string>
    <string name="pref_default_button_x">0</string>
    <string name="pref_default_button_y">0</string>
    <string name="pref_default_button_z">0</string>
    <string name="pref_default_button_lb">0</string>
    <string name="pref_default_button_rb">0</string>
    <string name="pref_default_button_l2">0</string>
    <string name="pref_default_button_r2">0</string>
    <string name="pref_default_button_start">0</string>
    <string name="pref_default_button_select">0</string>
    <string name="pref_default_button_tilt_up">0</string>
    <string name="pref_default_button_tilt_down">0</string>
    <string name="pref_default_button_tilt_left">0</string>
    <string name="pref_default_button_tilt_right">0</string>
    <string name="pref_default_button_right_stick_up">37</string>
    <string name="pref_default_button_right_stick_down">39</string>
    <string name="pref_default_button_right_stick_left">38</string>
    <string name="pref_default_button_right_stick_right">40</string>
    <string name="pref_default_hardkey" />
    <string name="pref_default_macro" />
    <string name="pref_default_backkey_action">1</string>
    <string name="pref_default_scale">10</string>
    <string name="pref_default_layout_position" />
    <string name="pref_default_right_stick_mode">2</string>
    <string name="pref_default_keyboard_mode">1</string>
    <string name="pref_button_dpad">D-Pad</string>
    <string name="pref_button_up">D-Pad Up</string>
    <string name="pref_button_down">D-Pad Down</string>
    <string name="pref_button_left">D-Pad Left</string>
    <string name="pref_button_right">D-Pad Right</string>
    <string name="pref_button_up_left">D-Pad Up-Left</string>
    <string name="pref_button_up_right">D-Pad Up-Right</string>
    <string name="pref_button_down_left">D-Pad Down-Left</string>
    <string name="pref_button_down_right">D-Pad Down-Right</string>
    <string name="pref_button_a">Button A</string>
    <string name="pref_button_b">Button B</string>
    <string name="pref_button_c">Button C</string>
    <string name="pref_button_x">Button X</string>
    <string name="pref_button_y">Button Y</string>
    <string name="pref_button_z">Button Z</string>
    <string name="pref_button_lb">Button LB</string>
    <string name="pref_button_rb">Button RB</string>
    <string name="pref_button_l2">Button L2</string>
    <string name="pref_button_r2">Button R2</string>
    <string name="pref_button_start">Button Start</string>
    <string name="pref_button_select">Button Select</string>
    <string name="pref_button_tilt_up">Tilt/Left Stick Up</string>
    <string name="pref_button_tilt_down">Tilt/Left Stick Down</string>
    <string name="pref_button_tilt_left">Tilt/Left Stick Left</string>
    <string name="pref_button_tilt_right">Tilt/Left Stick Right</string>
    <string name="pref_button_left_stick">Left Stick</string>
    <string name="pref_button_right_stick">Right Stick</string>
    <string name="pref_button_right_stick_up">Right Stick Up</string>
    <string name="pref_button_right_stick_down">Right Stick Down</string>
    <string name="pref_button_right_stick_left">Right Stick Left</string>
    <string name="pref_button_right_stick_right">Right Stick Right</string>
    <string name="app_name">ORZX Keyboard</string>
    <string name="app_settings">Game Keyboard Settings</string>
    <string name="ime_name">ORZX Keyboard</string>
    <string name="gamepad_edit">Gamepad Editor</string>
    <string name="pref_keyboard_mode">Default Keyboard Mode</string>
    <string name="pref_keyboard_mode_summary">Show Gamepad or Qwerty Keyboard on first launch</string>
    <string name="pref_category_ui">General Usage Options</string>
    <string name="pref_sound_on">Sound on keypress</string>
    <string name="pref_vibrate_on">Vibrate on keypress</string>
    <string name="pref_mini_map_on">Show Mini-Map</string>
    <string name="pref_sensor_on">Use Accelerometer</string>
    <string name="pref_sensor_on_summary">Control D-Pad with Accelerometer, tilt 30 degrees for center position</string>
    <string name="pref_an2an_on">Use An2An Service</string>
    <string name="pref_an2an_on_summary">Support remote control through An2An Service</string>
    <string name="pref_bluez_on">Use BluezService</string>
    <string name="pref_bluez_on_summary">Support Bluetooth Controller through BluezIME Service</string>
    <string name="pref_icade_on">iCade Fix</string>
    <string name="pref_icade_on_summary">Compatible with iCade controller, for device directly connect iCade as HID keyboard</string>
    <string name="pref_analog_on">Use Analog</string>
    <string name="pref_analog_on_summary">Control Analog Stick with Physical Controller, turn off to avoid analog compatibility issues</string>
    <string name="pref_mini_map_on_summary">Display a mini-map showing button status</string>
    <string name="pref_option_key_on">Use Action Menu</string>
    <string name="pref_option_key_on_summary">Hold [Back] key to show a menu for various actions</string>
    <string name="pref_backkey_action">[Back] Key Action</string>
    <string name="pref_backkey_action_summary">Select action for holding [Back] key, only function when onscreen keyboard is shown</string>
    <string name="pref_hotkey_on">Use Hot Key</string>
    <string name="pref_hotkey_on_summary">"Tap [Vol. Up] to show/hide Keyboard.
Tap [Mouse Middle] to toggle Virtual Mouse."</string>
    <string name="pref_category_system_hotkey">Custom Hot Key</string>
    <string name="pref_category_system_hotkey_summary">"Assign additional hot key.
IMPORTANT: Stop the app before assign key when having problem."</string>
    <string name="pref_hotkey_mouse">Toggle Virtual Mouse</string>
    <string name="pref_hotkey_gamepad">Show/Hide Keyboard</string>
    <string name="pref_hotspot_corner">Use Hotspot</string>
    <string name="pref_hotspot_corner_summary">Tap screen corner to show/hide keyboard. Hold screen corner to capture/release control</string>
    <string name="pref_swipe_up_on">Swipe Up Action</string>
    <string name="pref_swipe_up_on_summary">Show Input Method Picker</string>
    <string name="pref_swipe_down_on">Swipe Down Action</string>
    <string name="pref_swipe_down_on_summary">Show Settings Screen</string>
    <string name="pref_swipe_left_on">Swipe Left/Right Action</string>
    <string name="pref_swipe_left_on_summary">Toggle Gamepad or Keyboard mode</string>
    <string name="pref_warning_message_on">Show Warning</string>
    <string name="pref_transparency">Set Transparency</string>
    <string name="pref_scale">Set Buttons Size</string>
    <string name="pref_scale_summary">Resize all buttons. You can resize individual button in Edit Mode.</string>
    <string name="pref_unblock_on">Non-Blocking</string>
    <string name="pref_unblock_on_summary">"Unused Onscreen Gamepad area won't block touchscreen input. Slower and incompatible to some usage options."</string>
    <string name="pref_qwerty_first_on">Show Keyboard First</string>
    <string name="pref_qwerty_first_on_summary">Show Keyboard instead of Gamepad by default</string>
    <string name="pref_category_gamepad">Gamepad Style</string>
    <string name="pref_keyboard_layout">Select Gamepad Style</string>
    <string name="pref_8way_on">8-way D-Pad</string>
    <string name="pref_start_on">Show Start &amp; Select</string>
    <string name="pref_stick_on">Show Analog Stick</string>
    <string name="pref_category_profile">Profile</string>
    <string name="pref_save_profile">Save profile</string>
    <string name="pref_load_profile">Load profile</string>
    <string name="pref_delete_profile">Delete profile</string>
    <string name="pref_import_profile">Import profile</string>
    <string name="pref_import_profile_summary">Load external profile from .gkp file</string>
    <string name="pref_export_profile">Export profile</string>
    <string name="pref_export_profile_summary">Save current profile to /sdcard as .gkp file</string>
    <string name="pref_category_input">Input Device</string>
    <string name="pref_category_output">Operation Mode</string>
    <string name="pref_category_misc">Compatibility Options</string>
    <string name="pref_category_misc_summary">Fix various compatibility issues</string>
    <string name="pref_modifier_patch_on">Modifier Fix 1</string>
    <string name="pref_modifier_patch_on_summary">Solve compatibility issue of Alt and Shift key</string>
    <string name="pref_modifier_patch2_on">Modifier Fix 2</string>
    <string name="pref_fix_anr_on">ANR Fix</string>
    <string name="pref_fix_anr_on_summary">Solve Application Not Responding issue on some apps, may cause keypress glitch.</string>
    <string name="pref_fix_hold_on">Hold-Key Fix</string>
    <string name="pref_fix_hold_on_summary">Solve problem when input device generate improper autofire</string>
    <string name="pref_read_motion_event_on">Use Advance Input</string>
    <string name="pref_read_motion_event_on_summary">Support Physical Analog Stick and Xperia Play Touchpad (need rooted device)</string>
    <string name="pref_read_key_event_on">Alternate Key Detect</string>
    <string name="pref_read_key_event_on_summary">Enable only if this app cannot detect physical keypress, may need re-map key after enabled (need rooted device)</string>
    <string name="pref_read_mouse_event_on">Use Mouse Input</string>
    <string name="pref_read_mouse_event_on_summary">Use mouse to pan camera in Touchscreen Mode (need rooted device)</string>
    <string name="activate_prompt">&lt;b>Please follow these steps for the first time:&lt;/b></string>
    <string name="activate_step_1">Step 1: Tap here and enable %1$s from the list, confirm on the pop-up dialog, then return here.</string>
    <string name="activate_step_2">Step 2: Tap here and select %1$s as active Input Method.</string>
    <string name="activate_step_3">Step 3: Tap here and %1$s should come out. If not, make sure you have followed the above procedures correctly.</string>
    <string name="activate_step_4">Settings</string>
    <string name="activate_step_5">Show keyboard after exit</string>
    <string name="activate_step_6">Custom &amp; Test</string>
    <string name="activate_step_7">Usage Mode</string>
    <string name="activate_step_8">Input Device</string>
    <string name="profile">Load Profile</string>
    <string name="usage_text">"&lt;b>&lt;u>Quick Usage Tips:&lt;/u>&lt;/b>
* tap Top-Right screen corner/Vol-Up to toggle keyboard
* tap Mouse Middle to toggle Virtual Mouse
* hold Mouse Middle to capture/release mouse
* hold Top-Right screen corner to capture/release all control

&lt;b>&lt;u>Touchscreen Emulation Tips:&lt;/u>&lt;/b>
* enable Edit Mode to customize (e.g. rearrange touch point) inside games
* bind output to Numpad keys to swipe
* change camera pan options from \"R\" stick icon
* adjust drag/swipe range by resizing icon"</string>
</resources>